[components] fix presence stack counter partially hidden by avatars in local presence

--- a/packages/@sanity/components/src/presence/StackCounter.css
+++ b/packages/@sanity/components/src/presence/StackCounter.css
@@ -2,6 +2,9 @@
 
 .root {
   display: flex;
+}
+
+.root[data-tone='navbar'] {
   margin-right: -4px;
 }
 
